redroom/backups/minio/templates/minio-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: minio-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: minio
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9090
  tls:
    - hosts:
      - minio
